@@ -33,6 +33,7 @@ This release includes the following bugfixes:
  o libcurl-OpenSSL can load CRL files with more than one certificate inside
  o received cookies without explicit path got saved wrong if the URL had a
    query part
+ o don't shrink SO_SNDBUF on windows for those who have it set large already
 
 This release includes the following known bugs:
 
@@ -43,6 +44,7 @@ advice from friends like these:
 
  Karl Moerder, Kamil Dudka, Krister Johansen, Andre Guibert de Bruet,
  Michal Marek, Eric Wong, Guenter Knauf, Peter Sylvester, Daniel Johnson,
- Claes Jakobsson, Sven Anders, Chris Mumford, John P. McCaskey
+ Claes Jakobsson, Sven Anders, Chris Mumford, John P. McCaskey,
+ Constantine Sapuntzakis
 
         Thanks! (and sorry if I forgot to mention someone)
